# June

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Agents.md  Claude.md  Makefile  PROGRESS.md  WORKFLOW.md  jobright-automation-spec.md  pyproject.toml  requirements-dev.txt  requirements.txt  review.md
.claude/agents/: bug-fixer.md  coordinator.md  developer.md
config/: profile.yaml  settings.yaml
coordination/: CLAIM_TEMPLATE.md  README.md  WORKERS.md
coordination/claims/: auth-playwright-login--copilot.md  coordination-hardening--codex.md  devloop-coordinator-output--codex.md  devloop-start--codex.md  devloop-v1--codex.md  e6-executor-post-apply--claude.md  user-intake-v1--codex.md
coordination/user/: DECISIONS.md  README.md
devloop/: __init__.py  __main__.py  contracts.py  intake.py  models.py  supervisor.py
devloop/schemas/: planner.json  review_result.json  worker_result.json
selectors/: jobright.yaml
src/auth/: __init__.py  check.py  context.py  login.py  run_login.py  session.py
src/cli/: main.py
src/config/: profile.py  (+2 more)
tests/: conftest.py  test_auth_check.py  test_auth_context.py  test_auth_login.py  test_auth_session.py  test_cli.py  test_config.py  test_contracts.py  test_discovery_dedupe.py  test_discovery_extraction.py  test_discovery_feed.py  test_discovery_sync.py  test_logging_redaction.py  test_persistent_context_extension.py  test_review_state.py  test_secrets.py  test_selection_engine.py  test_selection_filters.py  test_selection_scoring.py  test_selector_broken.py  test_snapshot.py  test_tracker_repository.py
(+46 files in other folders)
