[project]
name = "june-jobright-autopilot"
version = "0.1.0"
description = "Autonomous JobRight (jobright.ai) job-application pipeline."
requires-python = ">=3.11"
readme = "README.md"

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-ra"
markers = [
    "playwright: marks tests that launch a real browser via Playwright",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
